@@ -4,14 +4,13 @@ import org.mapstruct.Mapper;
 import org.mapstruct.MappingConstants;
 import org.springframework.util.CollectionUtils;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 
 @Mapper(componentModel = MappingConstants.ComponentModel.SPRING)
 public interface SpotifyMapper {
   default <T extends SpotifyItem> List<String> toSeed(List<T> items) {
-    if (CollectionUtils.isEmpty(items)) return Collections.emptyList();
+    if (CollectionUtils.isEmpty(items)) return List.of();
     return items.stream().filter(Objects::nonNull).map(SpotifyItem::getId).toList();
   }
 }
